--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -182,7 +182,7 @@ OnlyBuildVisibility=False
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
