--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ ScreenPosition=X=307.000 Y=52.000
 WindowSize=X=1280.000 Y=720.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=False
-InitiallyMaximized=False
+InitiallyMaximized=True
 None=======
 
 [MessageLog]
