--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -258,11 +258,9 @@ AssetManagementBrowser.HiddenColumns=Class
 AssetManagementBrowser.HiddenColumns=Path
 
 [Directories2]
-<<<<<<< HEAD
 UNR=../../../../../Repository/hoge/MyProject/Content/StarterContent/Maps
-=======
 UNR=../../../../hoge/MyProject/Content/StarterContent/Maps
->>>>>>> 405cdcf3a60af04b24a8502ef60a22aa5e3266af
+None=======
 BRUSH=../../../../hoge/MyProject/Content/
 FBX=../../../../hoge/MyProject/Content/
 FBXAnim=../../../../hoge/MyProject/Content/
