--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -188,6 +188,7 @@ CleanShutdown=True
 InstalledPlugins=XRVisualization
 
 [PlacementMode]
+RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
@@ -259,7 +260,7 @@ AssetManagementBrowser.HiddenColumns=Path
 
 [Directories2]
 UNR=../../../../../Repository/hoge/MyProject/Content/StarterContent/Maps
-UNR=../../../../hoge/MyProject/Content/StarterContent/Maps
+UNR=../../../../../Repository/hoge/MyProject/Content/StarterContent/Maps
 None=======
 BRUSH=../../../../hoge/MyProject/Content/
 FBX=../../../../hoge/MyProject/Content/
@@ -3526,4 +3527,18 @@ BP_Sky_Sphere_C.Replication=True
 BP_Sky_Sphere_C.Collision=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+CineCameraActor.TransformCommon=True
+CineCameraActor.Current Camera Settings=True
+CineCameraActor.CameraOptions=True
+CineCameraActor.Camera=True
+CineCameraActor.PostProcess=True
+CineCameraActor.Lens=True
+CineCameraActor.Color Grading=True
+CineCameraActor.Rendering Features=True
+CineCameraActor.Tags=True
+CineCameraActor.Activation=True
+CineCameraActor.Collision=True
+CineCameraActor.Cooking=True
+CineCameraActor.Replication=True
+CineCameraActor.Actor=True
 
