暗黒消えた

--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -230,7 +230,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -320,6 +320,8 @@ AssetManagementBrowser.HiddenColumns=Class
 AssetManagementBrowser.HiddenColumns=Path
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
 UNR=../../../../../Repository/hoge/MyProject/Content/StarterContent/Maps
@@ -5054,6 +5056,9 @@ EditorPerformanceSettings=True
 EditorStyleSettings=True
 GameplayTagsSettings=True
 GeneralProjectSettings=True
+SynthesisEditorSettings=True
+InternationalizationSettingsModel=True
+GameMapsSettings=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -5065,6 +5070,7 @@ MRUItem4=/Game/StarterContent/Maps/StarterMap
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/FirstPersonBP/Maps/FirstPersonExampleMap_BuiltData.FirstPersonExampleMap_BuiltData=1
 /Game/StarterContent/Maps/Advanced_Lighting.Advanced_Lighting:PersistentLevel.Advanced_Lighting=1
+/Game/FirstPersonBP/Maps/FirstPersonExampleMap_BuiltData.FirstPersonExampleMap_BuiltData=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -5101,4 +5107,7 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[DetailCategoriesAdvanced]
+GameMapsSettings.DefaultMaps=True
 
