--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -238,6 +238,7 @@ None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/メインメニュー/メインメニュー.メインメニュー
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -265,13 +266,13 @@ None=======
 [RootWindow]
 ScreenPosition=X=-34.000 Y=19.000
 ScreenPosition=X=197.000 Y=20.000
-ScreenPosition=X=262.000 Y=31.000
+ScreenPosition=X=458.000 Y=140.000
 WindowSize=X=1280.000 Y=720.000
 WindowSize=X=1280.000 Y=720.000
-WindowSize=X=1280.000 Y=1095.000
+WindowSize=X=1280.000 Y=1075.000
 InitiallyMaximized=False
 InitiallyMaximized=True
-InitiallyMaximized=False
+InitiallyMaximized=True
 None=======
 
 [MessageLog]
@@ -5134,6 +5135,25 @@ FirstPersonCharacter_C.Pawn=True
 FirstPersonCharacter_C.Replication=True
 FirstPersonCharacter_C.Input=True
 FirstPersonCharacter_C.Actor=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+ComboBoxString.Layout=True
+ComboBoxString.Content=True
+ComboBoxString.Style=True
+ComboBoxString.Accessibility=True
+ComboBoxString.Interaction=True
+ComboBoxString.Behavior=True
+ComboBoxString.Render Transform=True
+ComboBoxString.Performance=True
+ComboBoxString.Clipping=True
+ComboBoxString.Navigation=True
+ComboBoxString.Localization=True
+ComboBoxString.Events=True
 
 [DetailMultiObjectNodeExpansion]
 EditorPerformanceSettings=True
@@ -5199,7 +5219,7 @@ NodeTemplateCacheCapMB=20.000000
 GameMapsSettings.DefaultMaps=True
 
 [WidgetTemplatesExpanded]
-インプット=False
+インプット=True
 エディタ=False
 シンセ=False
 その他=False
